--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/telescope": "^2.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
